--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   cached_network_image: ^3.1.0
+  webview_flutter: ^2.0.10
+  page_transition: ^2.0.2
 
 dev_dependencies:
   flutter_test:
